--- a/src/components/list/grid/styles/grid-cell.css
+++ b/src/components/list/grid/styles/grid-cell.css
@@ -14,6 +14,9 @@
   position: relative;
   font-size: inherit;
   min-width: var(--cell-min-width, 150px);
+  width: var(--cell-width, 150px);
+  flex-shrink: 0;
+  flex-grow: 0;
   background-color: inherit;
   z-index: 2;
 }
@@ -45,6 +48,9 @@
   cursor: cell;
   height: 100%;
   min-width: var(--cell-min-width, 150px);
+  width: var(--cell-width, 150px);
+  flex-shrink: 0;
+  flex-grow: 0;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
